--- a/pr-preview/pr-445/_sources/documentation/next/next_aerosol.ipynb
+++ b/pr-preview/pr-445/_sources/documentation/next/next_aerosol.ipynb
@@ -6,85 +6,11 @@
    "source": [
     "# Aerosol\n",
     "\n",
-    "Aerosols are complex systems comprising both gaseous components and particulate matter. To accurately model such systems, we introduce the `Aerosol` class, which serves as a facade for seamlessly interacting with both `Gas` and `Particle` objects. This class not only encapsulates the complexity of aerosol systems but also dynamically integrates the behaviors and properties of its gas and particle constituents.\n",
-    "\n",
-    "### Facade Pattern of Aerosol Systems\n",
-    "\n",
-    "The `Aerosol` class employs the [Facade Pattern](https://en.wikipedia.org/wiki/Facade_pattern) to provide a simplified interface to the more complex subsystems of gases and particles. This design choice offers several benefits:\n",
-    "\n",
-    "- **Simplified Interaction**: By abstracting the details of gas and particle interactions, the `Aerosol` class allows users to work with a simplified model of the aerosol system.\n",
-    "- **Dynamic Property and Method Attachment**: The class dynamically attaches the methods and properties of both `Gas` and `Particle` objects, ensuring that all relevant functionalities are directly accessible. (so maybe not a true facade pattern)\n",
-    "- **Enhanced Flexibility**: Replacing gas or particle components within an aerosol system is straightforward, enabling dynamic adjustments to the model as needed.\n",
+    "Aerosols are complex systems comprising both gaseous components and particulate matter. To accurately model such systems, we introduce the `Aerosol` class, which serves as a collection of `Gas` and `Particle` objects. \n",
     "\n",
     "### Implementation Overview\n",
     "\n",
-    "The `Aerosol` class initializes with instances of `Gas` and `Particle`, attaching their methods and properties dynamically. This approach allows for a consistent and intuitive interface for interacting with aerosol systems, regardless of the complexity or variability of the constituent gases and particles.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gas mass: [32. 18.]\n",
-      "Particle mass: 4.105014400690663e-19\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "from particula.base.gas import GasSpecies, Gas\n",
-    "from particula.base.particle import Particle, particle_strategy_factory\n",
-    "from particula.base.aerosol import Aerosol\n",
-    "\n",
-    "# Create a Gas instance\n",
-    "air = Gas()\n",
-    "air.add_species(\n",
-    "    name=\"Oxygen\",\n",
-    "    mass=32,\n",
-    "    vapor_pressure=0.21,\n",
-    "    condensable=False)\n",
-    "air.add_species(\n",
-    "    name=\"Water Vapor\",\n",
-    "    mass=18,\n",
-    "    vapor_pressure=2.3,\n",
-    "    condensable=True)\n",
-    "\n",
-    "# Example particle sizes in meters\n",
-    "particle_distribution = np.array([1e-9, 2e-9, 3e-9], dtype=np.float64)\n",
-    "particle_density = np.float64(1000)  # Example density in kg/m^3\n",
-    "particle_concentration = np.array(\n",
-    "    [1000, 2000, 3000], dtype=np.float64)  # Example concentrations\n",
-    "\n",
-    "particle = Particle(\n",
-    "    strategy=particle_strategy_factory(\"radii_based\"),\n",
-    "    distribution=particle_distribution,\n",
-    "    density=particle_density,\n",
-    "    concentration=particle_concentration\n",
-    ")\n",
-    "\n",
-    "# Create an Aerosol instance\n",
-    "aerosol = Aerosol(gas=air, particle=particle)\n",
-    "\n",
-    "# Accessing dynamically attached methods and properties\n",
-    "# Example method call, assuming such a method exists\n",
-    "print(f\"Gas mass: {aerosol.gas_get_mass()}\")\n",
-    "print(f\"Particle mass: {aerosol.particle_get_total_mass()}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion\n",
-    "\n",
-    "This section of your Jupyter notebook clarifies the role and functionality of the `Aerosol` class within aerosol modeling frameworks. By demonstrating how gases and particles are combined into a coherent model, you underscore the practical advantages of employing design patterns to abstract complexity and facilitate user interaction with aerosol systems. Through this approach, the notebook not only educates on the theoretical underpinnings of the `Aerosol` class but also provides actionable insights through examples, empowering users to effectively model and analyze aerosol systems in their work.\n",
-    "\n",
-    "This `Aerosol` collection or interface may change in the future, as we figure out this interacts with the aerosol simulation, but for now, this is a good start."
+    "The `Aerosol` class initializes with instances of `Gas` and `Particle`. There is a single `Gas` object and a list of `Particle` objects. The each can be iterated on to pull out the underlying `GasSpecies` and `Particle` objects.\n"
    ]
   },
   {
@@ -96,49 +22,129 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class Aerosol in module particula.base.aerosol:\n",
+      "Gas mass: ['water' 'butanol' 'styrene']\n",
+      "Particle mass: 9.42477796076938e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from particula.next.gas_species import GasSpeciesBuilder\n",
+    "from particula.next.particle import Particle, particle_strategy_factory\n",
+    "from particula.next.aerosol import Aerosol\n",
+    "from particula.next.gas_vapor_pressure import vapor_pressure_factory\n",
+    "from particula.next.particle_activity import particle_activity_strategy_factory\n",
+    "from particula.next.surface import surface_strategy_factory\n",
+    "\n",
+    "# Create a Gas instance\n",
+    "# Define the coefficients for Butanol using the Antoine equation.\n",
+    "butanol_coefficients = {'a': 7.838, 'b': 1558.19, 'c': 196.881}\n",
+    "butanol_antione = vapor_pressure_factory(\n",
+    "    strategy='antoine', **butanol_coefficients)\n",
+    "styrene_coefficients = {'a': 6.924, 'b': 1420, 'c': 226}\n",
+    "styrene_antione = vapor_pressure_factory(\n",
+    "    strategy='antoine', **styrene_coefficients)\n",
+    "# Water uses a different model for vapor pressure calculation called the\n",
+    "# Buck equation.\n",
+    "water_buck = vapor_pressure_factory(\n",
+    "    strategy='water_buck')\n",
+    "\n",
+    "# gas species\n",
+    "molar_mass = np.array([0.018, 0.074121, 104.15e-3])\n",
+    "vapor_pressure = [butanol_antione, styrene_antione]\n",
+    "concentration = np.array([0.017, 2e-6, 1e-9])\n",
+    "names = np.array([\"water\", \"butanol\", \"styrene\"])\n",
+    "gas_species = GasSpeciesBuilder() \\\n",
+    "    .name(names) \\\n",
+    "    .molar_mass(molar_mass) \\\n",
+    "    .vapor_pressure_strategy(vapor_pressure) \\\n",
+    "    .condensable(True) \\\n",
+    "    .concentration(concentration) \\\n",
+    "    .build()\n",
+    "\n",
+    "# particle distribution\n",
+    "particle_distribution = np.array([0.1, 0.2, 0.3, 0.4, 0.5]) * 1e-6\n",
+    "particle_density = 1.0e3\n",
+    "particle_concentration = np.ones_like(particle_distribution) * 1e6\n",
+    "\n",
+    "particle = Particle(\n",
+    "    strategy=particle_strategy_factory(\"radii_based_moving_bin\"),\n",
+    "    activity=particle_activity_strategy_factory(),\n",
+    "    surface=surface_strategy_factory(),\n",
+    "    distribution=particle_distribution,\n",
+    "    density=particle_density,\n",
+    "    concentration=particle_concentration\n",
+    ")\n",
+    "\n",
+    "# Create an Aerosol instance\n",
+    "aerosol = Aerosol(gas=gas_species, particles=particle)\n",
+    "\n",
+    "# Accessing dynamically attached methods and properties\n",
+    "# Example method call, assuming such a method exists\n",
+    "print(f\"Gas mass: {aerosol.gas}\")\n",
+    "print(f\"Particle mass: {aerosol.particles[0].get_total_mass()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "This `Aerosol` collection or interface may change in the future, as we figure out this interacts with the aerosol simulation, but for now, this is a good start."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class Aerosol in module particula.next.aerosol:\n",
       "\n",
       "class Aerosol(builtins.object)\n",
-      " |  Aerosol(gas: particula.base.gas.Gas, particle: particula.base.particle.Particle)\n",
+      " |  Aerosol(gas: particula.next.gas.Gas, particles: Union[particula.next.particle.Particle, List[particula.next.particle.Particle]])\n",
       " |  \n",
-      " |  A class that acts as a facade for interacting with a single Gas and a\n",
-      " |  single Particle object. It dynamically attaches methods and properties of\n",
-      " |  Gas and Particle objects to itself.\n",
+      " |  A class for interacting with collections of Gas and Particle objects.\n",
+      " |  Allows for the representation and manipulation of an aerosol, which\n",
+      " |  is composed of various gases and particles.\n",
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, gas: particula.base.gas.Gas, particle: particula.base.particle.Particle)\n",
-      " |      Initializes an Aerosol instance with a single Gas and Particle.\n",
-      " |      Dynamically attaches methods and properties of these objects to the\n",
-      " |      Aerosol instance.\n",
+      " |  __init__(self, gas: particula.next.gas.Gas, particles: Union[particula.next.particle.Particle, List[particula.next.particle.Particle]])\n",
+      " |      Initializes an Aerosol instance with Gas and Particle instances.\n",
       " |      \n",
       " |      Parameters:\n",
-      " |      - gas (Gas): A single Gas instance.\n",
-      " |      - particle (Particle): A single Particle instance.\n",
+      " |      - gas (Gas): Gas with many GasSpeices possible.\n",
+      " |      - particles (Union[Particle, List[Particle]]): One or more Particle\n",
+      " |      instances.\n",
       " |  \n",
-      " |  attach_methods_and_properties(self, obj_to_attach: Union[particula.base.gas.Gas, particula.base.particle.Particle], prefix: str)\n",
-      " |      Dynamically attaches methods and properties from the given object to\n",
-      " |      the Aerosol instance, prefixing them to distinguish between Gas and\n",
-      " |      Particle attributes.\n",
+      " |  add_gas(self, gas: particula.next.gas.Gas)\n",
+      " |      Replaces the current Gas instance with a new one.\n",
       " |      \n",
       " |      Parameters:\n",
-      " |      - obj: The object whose methods and properties are to be attached.\n",
-      " |      - prefix (str): The prefix to apply to the attached attributes.\n",
+      " |      - gas (Gas): The Gas instance to replace the current one.\n",
       " |  \n",
-      " |  replace_gas(self, gas: particula.base.gas.Gas)\n",
-      " |      Replaces the current Gas instance with a new one and dynamically\n",
-      " |      attaches its methods and properties.\n",
+      " |  add_particle(self, particle: particula.next.particle.Particle)\n",
+      " |      Adds a Particle instance to the aerosol.\n",
       " |      \n",
       " |      Parameters:\n",
-      " |      - gas (Gas): A new Gas instance to replace the current one.\n",
+      " |      - particle (Particle): The Particle instance to add.\n",
       " |  \n",
-      " |  replace_particle(self, particle: particula.base.particle.Particle)\n",
-      " |      Replaces the current Particle instance with a new one and dynamically\n",
-      " |      attaches its methods and properties.\n",
+      " |  iterate_gas(self) -> Iterator[particula.next.gas_species.GasSpecies]\n",
+      " |      Returns an iterator for gas species.\n",
       " |      \n",
-      " |      Parameters:\n",
-      " |      - particle (Particle): A new Particle instance to replace the current\n",
-      " |      one.\n",
+      " |      Returns:\n",
+      " |      Iterator[GasSpecies]: An iterator over the gas species type.\n",
+      " |  \n",
+      " |  iterate_particle(self) -> Iterator[particula.next.particle.Particle]\n",
+      " |      Returns an iterator for particle.\n",
+      " |      \n",
+      " |      Returns:\n",
+      " |      Iterator[Particle]: An iterator over the particle type.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors defined here:\n",
