--- a/pr-preview/pr-445/_sources/documentation/next/next_gas.ipynb
+++ b/pr-preview/pr-445/_sources/documentation/next/next_gas.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Gases\n",
     "\n",
+    "**This may get cut, as calling GasSpecies may be enough for all use cases. We'll see after gas phase processes**\n",
+    "\n",
     "Gases, alongside particles, constitute the essential components of an aerosol system. In their natural state, gases are collections of molecules that move freely, not bound to one another. We introduce the `Gas` class, a composite that aggregates multiple `GasSpecies` objects, each representing type of gas or gases.\n",
     "\n",
     "- **`Gas`**: Functions as a composite object capable of encompassing multiple `GasSpecies`, facilitating the management and operation of gas mixtures as coherent wholes.\n",
