--- a/pr-preview/pr-445/_sources/documentation/next/next_particle.ipynb
+++ b/pr-preview/pr-445/_sources/documentation/next/next_particle.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Strategies in Particle Distributions\n",
+    "# Particle Representation\n",
     "\n",
     "The behavior and properties of aerosols are significantly influenced by the characteristics of the particles they contain, including their mass, size, and concentration. To accurately model these aspects, we employ different **particle distribution strategies** that allow us to represent and manipulate particle data effectively.\n",
     "\n",
