--- a/pr-preview/pr-450/_sources/documentation/next/next_vapor_pressure.ipynb
+++ b/pr-preview/pr-450/_sources/documentation/next/next_vapor_pressure.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "In this notebook, we will explore the strategies for calculating vapor pressure as implemented in the `vapor_pressure` module. These strategies are essential for accurately modeling and understanding the behavior of aerosols in equilibrium with a liquid phase.\n",
     "\n",
+    "Wikipedia: [Vapor Pressure](https://en.wikipedia.org/wiki/Vapor_pressure)\n",
+    "\n",
     "## Units\n",
     "All measurements and calculations in this module adhere to the base SI units:\n",
     "- Molar mass is in kilograms per mole (kg/mol).\n",
